--- a/src/styles/Common.module.scss
+++ b/src/styles/Common.module.scss
@@ -1,3 +1,45 @@
+@import "./variable.scss";
+
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  height: $header-height;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(2.5px);
+  .container{
+    max-width: 64rem;
+    margin: 0 auto;
+    padding: 0 1rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    .logo{
+      display: flex;
+      align-items: center;
+    }
+    nav{
+      margin-left: 1rem;
+      display: flex;
+      align-items: center;
+      height: 100%;
+      a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        text-align: center;
+        font-size: 15px;
+        padding: 0 1.2rem;
+        color: #333;
+      }
+    }
+    
+  }
+}
+
 .banner {
   .container {
     display: flex;
@@ -40,10 +82,15 @@
 }
 
 .footer {
-  background-color: #f8f9fa;
+  background-color: #9b9999;
   padding: 2rem 0;
   border-top: 1px solid #e9ecef;
-
+  color: #333;
+  hr{
+    background-color: #333;
+    height: 1px;
+    border: 0;
+  }
   .container {
     max-width: 64rem;
     margin: 0 auto;
@@ -85,6 +132,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .header {
+    height: 64px;
+  }
   .banner {
     .container {
       flex-direction: column;
