--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,24 @@
     }
 }
 
+.img-container-50{
+    width: 50%;
+}
+
+.img-container{
+    width: 100%;
+    height: auto;
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    img{
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .stack{
         height: 2rem;
