--- a/src/styles/Common.module.scss
+++ b/src/styles/Common.module.scss
@@ -71,6 +71,7 @@
     .wrapper{
       margin: 1rem 0;
       display: flex;
+      align-items: flex-start;
     }
     .text{
       font-size: 18px;
@@ -145,6 +146,9 @@
 @media screen and (max-width: 1024px) {
   .header {
     height: 64px;
+    .logo-text{
+      display: none;
+    }
   }
   .banner {
     .container {
@@ -157,8 +161,19 @@
   }
   .section{
     .container{
+      .wrapper{
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
       .top{
         flex-direction: column;
+        .btn-group{
+          img{
+            width: 150px;
+          }
+          
+        }
         h3{
           margin-bottom: 1rem;
         }
